<resources>
    <string name="app_name">IAmClever</string>
    <string name="intro">Программа предназначена для изучения иностранных языков методом ежедневного запоминания слов и устойчивых выражений с проверкой в виде экзамена и бальной системой.</string>
    <string name="welcome">Ваш профиль успешно создан/изменен. Теперь вы можете начать или продолжить обучение.</string>
    <string name="no_lang_selected">Не выбран доступный язык для обучения. Пожалуйста выберите язык в настройках программы.</string>
    <string name="next_lesson">Следующий урок через 30 минут</string>
    <string name="new_words_hello">Проверка знаний</string>
    <string name="new_words">Пожалуйста запомните новые слова и выражения.</string>
    <string name="image_description">Изображение</string>
    <string name="profile_add_name">Имя пользователя</string>
    <string name="add_word_lang">Выбрать язык</string>
    <string name="profile_add_lang1">Выбрать язык 1</string>
    <string name="profile_add_lang2">Выбрать язык 2</string>
    <string name="profile_add_lang3">Выбрать язык 3</string>
    <string name="profile_lang1">Язык 1</string>
    <string name="profile_lang2">Язык 2</string>
    <string name="profile_lang3">Язык 3</string>
    <string name="profile_level1">Уровень владения</string>
    <string name="profile_level2">Уровень владения</string>
    <string name="profile_level3">Уровень владения</string>
    <string name="profile_days1">Дней обучения</string>
    <string name="profile_words_shown1">Слов показано</string>
    <string name="profile_phrases_shown1">Выражений показано</string>
    <string name="profile_exams1">Зачетов пройдено</string>
    <string name="profile_questions1">Вопросов задано</string>
    <string name="profile_questions_complete1">Вопросов правильно</string>
    <string name="profile_shows1">Экзаменов показано</string>
    <string name="profile_shows_complete1">Экзаменов закончено</string>
    <string name="profile_rights1">Правильных ответов</string>
    <string name="profile_login">E-mail</string>
    <string name="profile_password">Пароль</string>
    <string name="profile_image">Аватар пользователя</string>
    <string name="profile_check_event">Проверять знания</string>
    <string name="profile_submit_button">Добавить</string>
    <string name="profile_submit_delete">Удалить профиль</string>
    <string name="language_english">Английский</string>
    <string name="language_italiano">Итальянский</string>
    <string name="language_deutch">Немецкий</string>
    <string name="language_spain">Испанский</string>
    <string name="question_answer">Ответить</string>
    <string name="question_cancel">Отказаться</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="choose_weekday">Выберите дни недели</string>
    <string name="choose_time">Время учебы/экзаменов</string>
    <string name="choose_languages">Выберите изучаемые языки</string>
    <string name="default_time">Время запуска: </string>
    <string name="profile_change_button">Изменить</string>
    <string name="button_remember">Запомнил</string>
    <string name="begin">Начало:</string>
    <string name="end">Конец:</string>
    <string name="period">Период</string>
    <string name="question_type_word">Переведите слово</string>
    <string name="total_questions">Всего вопросов языка</string>
    <string name="question_type_expression">Выберите правильный перевод выражения</string>
    <string name="question_type_letter">Вставьте пропущенную букву</string>
    <string name="question_type">Тип вопроса</string>
    <string name="levels">Уровень вопроса</string>
    <string name="original">Оригинал</string>
    <string name="about">Разработка: olejek (shtrm.ru) 2016</string>
    <string name="answer">Перевод</string>
    <string name="add_new_word">Добавьте новое слово</string>
    <string name="rating_intro">Рейтинг среди обучающихся</string>
    <string name="question_level">Тип и уровень вопроса</string>
    <string name="default_tips">Common European Framework of Reference - система уровней владения иностранным языком, используемая в Европейском Союзе. Соответствующая директива была выработана Советом Европы как основная часть проекта «Изучение языков для европейского гражданства» («Language Learning for European Citizenship») между 1989 и 1996 годами. Главная цель системы - предоставить метод оценки и обучения, применимый для всех европейских языков.</string>
</resources>
