<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/profile_add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/profile_add_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView android:id="@+id/profile_add_image_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/profile_image" />

            <ImageView android:id="@+id/profile_add_image"
	            android:layout_width="wrap_content"
                android:layout_gravity="center"
	            android:layout_height="wrap_content"
	            android:src="@drawable/profile_default_small" />

        </LinearLayout>

        <Spinner
            android:id="@+id/profile_add_lang1"
            android:layout_height="wrap_content"
            android:entries="@array/languages_list"
            android:prompt="@string/profile_add_lang1"
            android:layout_width="match_parent"/>
        <Spinner
            android:id="@+id/profile_add_lang2"
            android:layout_height="wrap_content"
            android:entries="@array/languages_list"
            android:prompt="@string/profile_add_lang2"
            android:layout_width="match_parent"/>
        <Spinner
            android:id="@+id/profile_add_lang3"
            android:layout_height="wrap_content"
            android:entries="@array/languages_list"
            android:prompt="@string/profile_add_lang3"
            android:layout_width="match_parent"/>
        <CheckBox
            android:id="@+id/CheckBoxResponse"
            android:layout_height="wrap_content"
            android:text="@string/profile_check_event"
            android:layout_width="fill_parent"/>

        <EditText android:id="@+id/profile_add_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_login" />

        <EditText android:id="@+id/profile_add_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_password" />

        <Button
            android:id="@+id/profile_button_submit"
            android:layout_height="wrap_content"
            android:text="@string/profile_submit_button"
            android:layout_width="fill_parent"/>

    </LinearLayout>
</ScrollView>
