<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/add_word_LinearLayout01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/settings_divider0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:height="30sp"
            android:padding="5dip"
            android:background="#FF4844"
            android:text="@string/add_new_word"
            android:textColor="@color/text_color" />

        <Spinner
            android:id="@+id/add_word_lang"
            android:layout_height="wrap_content"
            android:entries="@array/languages_list"
            android:prompt="@string/add_word_lang"
            android:height="30sp"
            android:padding="5dip"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/settings_divider1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:height="30sp"
            android:padding="5dip"
            android:background="#FF4844"
            android:text="@string/question_level"
            android:textColor="@color/text_color" />
        <Spinner
            android:id="@+id/add_word_type"
            android:layout_height="wrap_content"
            android:entries="@array/questions_type"
            android:prompt="@string/question_type"
            android:height="30sp"
            android:padding="5dip"
            android:layout_width="match_parent"/>

        <Spinner
            android:id="@+id/add_word_level"
            android:layout_height="wrap_content"
            android:entries="@array/levels"
            android:prompt="@string/levels"
            android:height="30sp"
            android:padding="5dip"
            android:layout_width="match_parent"/>

        <EditText
            android:id="@+id/add_word_original"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/original"
            android:gravity="start"
            android:text="@string/original"/>

        <EditText
            android:id="@+id/add_word_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/answer"
            android:text="@string/answer"/>

        <Button
            android:id="@+id/add_word_button_submit"
            android:layout_height="wrap_content"
            android:text="@string/profile_submit_button"
            android:layout_width="fill_parent"/>
    </LinearLayout>
</ScrollView>
