<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_divider4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:height="20sp"
        android:textColor="@color/text_color" />

    <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="200sp" />

    <TextView
            android:id="@+id/settings_divider0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:height="30sp"
            android:padding="5dip"
            android:background="#FF4844"
            android:text="@string/profile_add_name"
            android:textColor="@color/text_color" />

        <Spinner
            android:id="@+id/profile_choose_lang"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:entries="@array/languages_list"
            android:prompt="@string/add_word_lang"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/profile_shows_complete"
            android:layout_width="match_parent"
            android:padding="5dip"
            android:layout_height="wrap_content"
            android:hint="@string/profile_shows_complete1" />
        <TextView
            android:id="@+id/profile_shows"
            android:layout_width="match_parent"
            android:padding="5dip"
            android:layout_height="wrap_content"
            android:hint="@string/profile_shows1" />

        <TextView
            android:id="@+id/profile_question_complete"
            android:layout_width="match_parent"
            android:padding="5dip"
            android:layout_height="wrap_content"
            android:hint="@string/profile_questions_complete1" />
        <TextView
            android:id="@+id/profile_question"
            android:layout_width="match_parent"
            android:padding="5dip"
            android:layout_height="wrap_content"
            android:hint="@string/profile_questions1" />

    </LinearLayout>
