<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/new_words_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_words"
        android:gravity="center_vertical"
        android:layout_toRightOf="@+id/lang_icon"
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <ImageView
        android:id="@+id/lang_icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="2dip"
        android:contentDescription="@string/image_description"
        android:maxHeight="50dp"
        android:maxWidth="80dp" />

    <CheckBox
        android:id="@+id/new_word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <CheckBox
        android:id="@+id/new_word2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <CheckBox
        android:id="@+id/new_word3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <CheckBox
        android:id="@+id/new_word4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <CheckBox
        android:id="@+id/new_word5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical"
            android:layout_alignParentTop="true"/>
        <View
            android:id="@+id/ViewColorPickerHelper1"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/CheckNewWords"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/question_answer"
            android:textColor="@color/text_color"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/ViewColorPickerHelper1"/>
    </RelativeLayout>

</LinearLayout>